# django-mailrobot

./: .bumpversion.cfg  .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  models.rst  testing.rst  usage.rst
requirements/: base.txt  dev.txt
src/mailer/: urls.py  wsgi.py
src/mailer/fixtures/: adminuser.json
src/mailer/settings/: base.py  demo.py  test.py
src/mailrobot/: admin.py  models.py  tests.py
src/mailrobot/fixtures/: example.json
src/mailrobot/migrations/: 0001_initial.py
tests/: __init__.py
tests/fixtures/: example.json
