[metadata]
name = django-mailrobot
version = attr: mailrobot.__version__
description = Stores and sends canned email responses.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/kaleissin/django-mailrobot
author_email = kaleissin@gmail.com
author = kaleissin
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Email
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2

[options]
zip_safe = False
include_package_data = True
packages = mailrobot
package_dir =
    = src/
platforms = any
python_requires = >=3.6

[options.package_data]
* = *.rst

[options.packages.find]
exclude = tests
where = ./src/

[flake8]
exclude = .*,__pycache__,docs,migrations,*.py?,static,templates,*.csv,*.json,build,dist
